@@ -244,3 +244,4 @@ Version 0.35
 * fixed style sheet list editing
 * updated Russian translation
 * updated Greek translation (Dimitrios Glentadakis)
+* updated Dutch (Netherlands) translation (Heimen Stoffels)
